--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "jscord",
+  "name": "wired-js",
   "version": "1.0.0",
   "description": "All-new discord library written in JS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-dev": "nodemon test.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,9 @@
     "erlpack": "github:discord/erlpack",
     "utf-8-validate": "^5.0.3",
     "zlib-sync": "^0.1.7"
+  },
+  "devDependencies": {
+    "jsdoc": "^3.6.6",
+    "nodemon": "^2.0.6"
   }
 }
