--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "nodemon test.js"
+    "start-dev": "nodemon test.js",
+    "docs": "./node_modules/.bin/jsdoc --configure jsdoc.json"
   },
   "repository": {
     "type": "git",
