--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "jsdoc": "^3.6.6",
-    "jsdoc-template": "^1.2.0",
+    "jsdoc-template": "github:braintree/jsdoc-template",
     "nodemon": "^2.0.6"
   }
 }
